# spectra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
data/O2/: README.md
data/O2/einstein/: B3Su-_to_X3Sg-_allison.csv  B3Su-_to_X3Sg-_laux.csv
data/O2/franck-condon/: B3Su-_to_X3Sg-_cheung.csv  B3Su-_to_X3Sg-_laux.csv
data/O2/predissociation/: cheung_p.csv  cosby_0.csv  cosby_2.csv  lewis_1.csv  lewis_2.csv  lewis_coeffs.csv
data/O2/states/: B3Su-.csv  X3Sg-.csv
data/samples/: harvard_20.csv  harvard_60.csv
docs/: pygeonosis.tex  references.bib  spectra.tex
docs/chapters/: approximations.tex  hund.tex  intensities.tex  lineshapes.tex  numbers.tex  structure.tex  uncoupling.tex
src/: atom.py  band.py  colors.py  constants.py  convolve.py  gui.py  lif.py  line.py  main.py  molecule.py  plot.py  script.py  sim.py  simtype.py  state.py  terms.py  utils.py
