[project]
name = "pyGEONOSIS"
version = "0.1.0"
description = "A tool for simulating the Schumann-Runge (B-X) bands of molecular oxygen, and eventually the A-X transition of nitric oxide."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "polars>=1.29.0",
    "pyqtgraph>=0.13.7",
    "pyside6-essentials>=6.9.0",
    "scipy>=1.15.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "C4",
    "C90",
    "D",
    "E",
    "FIX",
    "I",
    "N",
    "NPY",
    "PL",
    "RET",
    "SIM",
    "TC",
    "UP",
    "W",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
